frostwire (5.2.10) stable; urgency=high
  * Upload ratios will not be enforced to 30% of downloads anymore.
    Users will have free will to set the upload ratio of their preference.
  
 -- FrostWire Team <contact@frostwire.com>  Sat, 19 Nov 2011 06:43:56 -0500

frostwire (5.2.9) stable; urgency=high
  * Enhancement: Lucene full text indexing for Smart Search database to
    allow for fuzzy searches.
  * Enhancement: Lucene full text indexing for Library database allows
    better search results on Radio search and playlist search.
  * Enhancement: Audio player will start playing currently selected audio
    source if it's on a stopped state.
  * Bug Fix: Finished Downloads shows only finished downloads.
  
 -- FrostWire Team <contact@frostwire.com>  Wed, 9 Nov 2011 12:11:10 -0500

frostwire (5.2.8) stable; urgency=high
  * Smart search updates uses less DHT resources and fixes logic bugs
    that results into faster and better search results.
  * New Internet Radio functionality on the Library. Play, Add, Remove
    and bookmark your favorite Internet Radio Stations.
  * Book/Document search now crawls for .cbr, .cbz, .cb7, .cbt and .cba
    file formats.
  * New "Show in Library" action for finished transfers. It is now the
    default action when a finished transfer has been double clicked.
  * Clicking on the currently played audio control should always take
    the user to the currently played audio file.
  * Top Library tree nodes re-arranged.
  * When downloading a single partial file, the transfer manager shows
    the proper icon based on the file type of the file being downloaded.
  * Add partial downloads, and multiple transfers that contain audio files
    to playlists right from the transfer manager.
  * The library can now be configured to scan any folder the user desires.
  * Files can be added to playlists right out of search results.
  * New explore action button on the Library tab.
  * New send to friend action button on the Library tab.